--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 <div class="row">
                     <label for="bangla">Bangla</label>
                     <div class="marks-box">
-                        <input type="text" placeholder="Number you got" />
+                        <input id="bangla-number"type="text" placeholder="Number you got" />
                     </div>
                     <div class="action-box">
-                        <button>Calculate</button>
+                        <button id="addNumber">Calculate</button>
                     </div>
                     <div class="grade-box">
-                        <p>F</p>
+                        <p> <span id="grade">F</span> </p>
                     </div>
                 </div>
 
@@ -68,6 +68,8 @@
             </div>
         </div>
     </div>
+
+    <script src="./script.js"></script>
 </body>
 
 </html>
