bangla subject marks calulated and also total marks calculated

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="footer">
-                <p>Total Mark: <strong>00</strong></p>
+                <p>Total Mark: <strong id="total-marks">  00</strong></p>
                 <div class="action-box">
                     <button>Calculate</button>
                 </div>
