english grade calculated

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                 <div class="row">
                     <label for="english">English</label>
                     <div class="marks-box">
-                        <input type="text" placeholder="Number you got" />
+                        <input id="english-number" type="text" placeholder="Number you got" />
                     </div>
                     <div class="action-box">
-                        <button>Calculate</button>
+                        <button id="addNUmberEnglish">Calculate</button>
                     </div>
                     <div class="grade-box">
-                        <p>F</p>
+                        <p><span id="grade-english">F</span></p>
                     </div>
                 </div>
                 <div class="row">
