--- a/index.html
+++ b/index.html
@@ -48,23 +48,23 @@
                 <div class="row">
                     <label for="ict">ICT</label>
                     <div class="marks-box">
-                        <input type="text" placeholder="Number you got" />
+                        <input id="ict-number" type="text" placeholder="Number you got" />
                     </div>
                     <div class="action-box">
-                        <button>Calculate</button>
+                        <button id="addNUmberIct">Calculate</button>
                     </div>
                     <div class="grade-box">
-                        <p>F</p>
+                        <p> <span id="grade-ict">F</span></p>
                     </div>
                 </div>
             </div>
             <div class="footer">
                 <p>Total Mark: <strong id="total-marks">  00</strong></p>
                 <div class="action-box">
-                    <button>Calculate</button>
+                    <button id="grade-button">Calculate</button>
                 </div>
 
-                <p>Final Grade: <strong>F</strong></p>
+                <p>Final Grade: <strong id="final-grade">F</strong></p>
             </div>
         </div>
     </div>
